Project Farma_Xperiun {
  database_type: "SQLite"
  note: "Esquema relacional completo da base Farma Xperiun, com normalizações e relacionamentos explícitos."
}


// ---------------------------------------------------------------------------
// Tabela d_calendario
// ---------------------------------------------------------------------------
Table d_calendario {
  data text [pk]
  ano integer
  mes integer
  nome_mes text
  trimestre integer
  semestre integer
  dia_semana integer
  nome_dia_semana text
  is_fim_semana integer
  is_feriado integer
}

// ---------------------------------------------------------------------------
// Tabela d_fornecedor
// ---------------------------------------------------------------------------
Table d_fornecedor {
  fornecedor_id integer [pk]
  nome text
  cidade text
  estado text
  regiao text
  prazo_entrega_dias integer
}

// ---------------------------------------------------------------------------
// Tabela d_meta_mensal
// ---------------------------------------------------------------------------
Table d_meta_mensal {
  meta_id integer [pk]
  ano integer
  mes integer
  meta_receita real
  meta_quantidade integer
}

// ---------------------------------------------------------------------------
// Tabela d_produto
// ---------------------------------------------------------------------------
Table d_produto {
  produto_id integer [pk]
  nome_produto text
  codigo_atc text
  categoria text
  grupo_terapeutico text
  preco_unitario real
  custo_unitario real
  margem_percentual real
  exige_receita integer
}

// ---------------------------------------------------------------------------
// Tabela d_turno
// ---------------------------------------------------------------------------
Table d_turno {
  turno_id integer [pk]
  nome_turno text
  hora_inicio integer
  hora_fim integer
}

// ---------------------------------------------------------------------------
// Tabela f_vendas
// ---------------------------------------------------------------------------
Table f_vendas {
  venda_id integer [pk]
  data text
  hora integer
  turno_id integer
  produto_id integer
  fornecedor_id integer
  quantidade real
  preco_unitario real
  receita_bruta real
  desconto real
  receita_liquida real
  custo_total real
  lucro real
  forma_pagamento text
}

// ---------------------------------------------------------------------------
// Relacionamentos (Foreign Keys)
// ---------------------------------------------------------------------------
Ref: f_vendas.data > d_calendario.data
Ref: f_vendas.turno_id > d_turno.turno_id
Ref: f_vendas.produto_id > d_produto.produto_id
Ref: f_vendas.fornecedor_id > d_fornecedor.fornecedor_id